--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
+    "datatables.net-dt": "^1.13.4",
+    "datatables.net-responsive-dt": "^2.4.1",
     "js-md5": "^0.7.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
